# PostFinder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  alembic.ini  bot.py  main.py  mypy.ini  pyproject.toml  pytest.ini  run_bot.sh  setup.cfg  test.py
.github/workflows/: python-app.yml
chroma_db/42ae170e-d2c5-4959-8f38-bd1747ac0aee/: index_metadata.pickle
chroma_db/da14d9b0-fb10-402b-b8c2-2fa03a5f095f/: index_metadata.pickle
docker/: Dockerfile  bot.sh  docker-compose.yaml
docs/: designdoc.md
migrations/versions/: 2024_01_13_1451-c1e79b635e04_.py  2024_01_17_2305-dad942c056df_.py
notebooks/: langchain.ipynb  langchain2.ipynb
notebooks/chroma_db_2/: chroma.sqlite3
sessions/: post_finder.session  post_finder.session-journal
src/app/: app.py  bot.py  loader.py  openai.py
src/artifacts/: admins.txt  whitelist.txt
src/artifacts/migrations/: env.py
src/artifacts/migrations/versions/: 2024_01_18_1755-2ee513caeeee_.py  2024_01_23_2204-7a301a687618_.py  2024_01_23_2215-3aa3d81aded1_.py
src/artifacts/sessions/: post_finder.session-journal
src/config/: __init__.py  config.py  config.yaml  managment.py
src/dags/: parser.py  prefect.sh
src/database/: backup.py  chroma.py  chroma_service.py  database.py  models.py  postgres_service.py
src/handlers/: admin.py  callbacks.py  commands.py  dialog.py  test.py
src/handlers/utils/: filters.py  markup.py  scrapper.py  validation.py
src/utils/: admin_service.py  antifrod.py  extractor.py  filters.py  markup.py  schemas.py  scrapper.py  semantic_splitter.py  tg_processing.py  ui_helpers.py  validation.py  yt_processing.py  yt_scrapper.py
tests/: conftest.py  run_pylint.py  test.py  test_db.py
