[tool.poetry]
name = "POSTFINDER"
version = "0.1.0"
description = ""
authors = ["Torchme"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
openai = "^1.3.7"
pre-commit = "^3.5.0"
loguru = "^0.7.2"
pandas = "2.0.3"
telethon = "^1.33.1"
aiogram = "^3.2.0"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "22.10.0"
isort = "5.12.0"
pylint = "3.0.2"
mypy = "1.7.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
